# rtwobia_new

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements.md  resources.md  review.md
.github/workflows/: ci.yml
docs/: api_and_cli.md  classification.md  data_model.md  embeddings.md  feature_extraction.md  gui.md  index.md  plan.md  potential_improvements.md  segmentation.md
docs/api/: batch.md  change.md  classification.md  features.md  index.md  io.md  pipeline.md  segmentation.md  utils.md
qgis_plugin/: __init__.py  geoobia_plugin.py  metadata.txt
qgis_plugin/processing/: batch_alg.py  change_detection_alg.py  classification_alg.py  features_alg.py  multiscale_alg.py  provider.py  segmentation_alg.py
qgis_plugin/ui/: classification_panel.py  feature_explorer.py  features_panel.py  layer_utils.py  results_panel.py  sample_selector.py  schema_widgets.py  segmentation_panel.py  tasks.py
src/geobia/: __init__.py  batch.py  change.py  cli.py
src/geobia/classification/: __init__.py  accuracy.py  base.py  fuzzy.py  supervised.py  unsupervised.py
src/geobia/features/: __init__.py  base.py  context.py  geometry.py  spectral.py  texture.py
src/geobia/io/: __init__.py  raster.py  vector.py
src/geobia/pipeline/: __init__.py  engine.py
src/geobia/segmentation/: __init__.py  base.py  felzenszwalb.py  multiscale.py  sam.py  shepherd.py  slic.py  watershed.py
src/geobia/utils/: __init__.py  labels.py  vectorize.py
tests/: conftest.py  test_accuracy.py  test_batch.py  test_batch_edge_cases.py  test_benchmark.py  test_change.py  test_classification.py  test_classification_edge_cases.py  test_cli.py  test_context.py  test_feature_edge_cases.py  test_features.py  test_fuzzy.py  test_io.py  test_multiscale.py  test_parametrized.py  test_pipeline.py  test_qgis_processing.py  test_sam.py  test_segmentation.py  test_segmentation_properties.py  test_spot_integration.py  test_supervised_classifiers.py  test_texture.py  test_tiled.py  test_unsupervised.py  test_utils.py  test_vector.py  test_watershed.py
