[project]
name = "geobia"
version = "0.1.0"
description = "Geographic Object-Based Image Analysis for geospatial imagery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "scikit-learn>=1.3",
    "click>=8.1",
    "pyarrow>=14.0",
    "joblib>=1.3",
    "numba>=0.60",
    "pyshepseg @ git+https://github.com/ubarsc/pyshepseg.git",
]

[project.optional-dependencies]
sam = ["segment-geospatial>=0.11"]

[project.scripts]
geobia = "geobia.cli:cli"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow-running",
    "spot_image: marks tests that require the SPOT_ROI.tif test image",
    "benchmark: marks benchmark tests",
]
