[project]
name = "geobia"
version = "0.1.0"
description = "Geographic Object-Based Image Analysis for geospatial imagery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "scikit-learn>=1.3",
    "click>=8.1",
    "pyarrow>=14.0",
    "joblib>=1.3",
    "numba>=0.60",
    "pyshepseg @ git+https://github.com/ubarsc/pyshepseg.git@f9e84753c45ff195d451b47e9f2ff652007404c4",
]

[project.optional-dependencies]
sam = ["segment-geospatial>=0.11"]

[project.scripts]
geobia = "geobia.cli:cli"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # use ternary operator (often less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["geobia"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow-running",
    "spot_image: marks tests that require the SPOT_ROI.tif test image",
    "benchmark: marks benchmark tests",
    "qgis: marks tests that require QGIS Python bindings",
]
